samples/_failures_safe/1761150119_19542d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_61fc8968.c: In function ‘main’:
./samples/SAFE/__tmp_61fc8968.c:161:20: error: ‘mat’ undeclared (first use in this function); did you mean ‘mat2’?
  161 |     destroy_matrix(mat
      |                    ^~~
      |                    mat2
./samples/SAFE/__tmp_61fc8968.c:161:20: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_61fc8968.c:161:23: error: expected ‘)’ at end of input
  161 |     destroy_matrix(mat
      |                   ~   ^
      |                       )
./samples/SAFE/__tmp_61fc8968.c:161:5: error: expected declaration or statement at end of input
  161 |     destroy_matrix(mat
      |     ^~~~~~~~~~~~~~
